Fixed issue that dashboard status doesn't update when the alarm device doesn't have any sensor connection

--- a/docker/src/templates/dashboard.jinja
+++ b/docker/src/templates/dashboard.jinja
@@ -125,6 +125,9 @@
                                     update_device_alert(result[0], id, level)
                                 }
                             }
+                            if (data.payload == null) { 
+                                update_device_alert(result[0], undefined, false);
+                            }
                             break;
                     }
                 });
